--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -597,3 +597,11 @@ a.icon-up-bg:hover {color: #212121;}
     text-align: center;
 }
 
+/* Cursor title input */
+.txt-type > .txt {
+    border-right: 0.1rem solid rgba(5, 5, 5, 0.671);
+  }
+
+.intro-title {
+    font-size: 24px;
+}
