--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,38 +603,14 @@ a.icon-up-bg:hover {color: #212121;}
     font-size: 24px;
 }
 
-/*	gallery */
-.gallery_product{
-	padding: 10px;
-	position:relative;
+.form-section{
+    margin-top: 15vh;
 }
 
-.gallery_product .img-info{
-	position:absolute;
-    background: rgba(0,0,0,0.5);
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-	top: 10px;
-	overflow:hidden;
-	color:#fff;
-	display:none;
+#mail_form{
+    padding-top: 5vh;
 }
 
-.img-info {
-    padding: 10px;
+button.btn.btn-border {
+    margin-top: 15vh;
 }
-
-.img-info p {
-    font-size: 14px;
-}
-
-
-.gallery_product:hover .img-info{
-	display:block;
-   -webkit-transition: 2s;
-    transition: 2s;
-
-}
-
-/*	end gallery */
