--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,41 +9,66 @@
 /* FONT
 ================================================== */
 @font-face {
-  font-family: 'fontello';
-  src: url('../fonts/fontello.eot?37927580');
-  src: url('../fonts/fontello.eot?37927580#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?37927580') format('woff2'),
-       url('../fonts/fontello.woff?37927580') format('woff'),
-       url('../fonts/fontello.ttf?37927580') format('truetype'),
-       url('../fonts/fontello.svg?37927580#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'fontello';
+    src: url('../fonts/fontello.eot?37927580');
+    src: url('../fonts/fontello.eot?37927580#iefix') format('embedded-opentype'),
+        url('../fonts/fontello.woff2?37927580') format('woff2'),
+        url('../fonts/fontello.woff?37927580') format('woff'),
+        url('../fonts/fontello.ttf?37927580') format('truetype'),
+        url('../fonts/fontello.svg?37927580#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
- 
- [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1em;
-  margin-left: .2em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1em;
+    margin-left: .2em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
- 
-.icon-twitter:before { content: '\f099'; } /* '' */
-.icon-facebook:before { content: '\f09a'; } /* '' */
-.icon-gplus:before { content: '\f0d5'; } /* '' */
-.icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-up:before { content: '\f176'; } /* '' */
+
+.icon-twitter:before {
+    content: '\f099';
+}
+
+/* '' */
+.icon-facebook:before {
+    content: '\f09a';
+}
+
+/* '' */
+.icon-gplus:before {
+    content: '\f0d5';
+}
+
+/* '' */
+.icon-linkedin:before {
+    content: '\f0e1';
+}
+
+/* '' */
+.icon-linkedin:before {
+    content: '\f0e1';
+}
+
+/* '' */
+.icon-up:before {
+    content: '\f176';
+}
+
+/* '' */
 
 /* CUSTOM RESETS
 ================================================== */
@@ -65,7 +90,7 @@ h4 {
     font-size: 30px;
 }
 
-/* Buttons */ 
+/* Buttons */
 .btn {
     min-width: 145px;
     line-height: 50px;
@@ -89,7 +114,7 @@ h4 {
 .btn-border {
     background-color: transparent;
     color: #212121;
-    border: 1px solid #212121; 
+    border: 1px solid #212121;
 }
 
 .btn-fill:hover,
@@ -108,11 +133,11 @@ h4 {
     border: 0;
     border-bottom: 1px solid #212121;
     border-radius: 0;
-    background-color: transparent; 
+    background-color: transparent;
     box-shadow: none;
     outline: 0 none transparent;
-    -webkit-appearance:none;
- }
+    -webkit-appearance: none;
+}
 
 textarea {
     margin-top: 40px;
@@ -132,7 +157,8 @@ textarea {
 
 /* LAYOUT
 ================================================== */
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -177,7 +203,7 @@ html, body {
 }
 
 /* Navigation */
-.navbar-nav > li > a {
+.navbar-nav>li>a {
     padding: 5px 0;
     font-weight: 600;
     color: #212121;
@@ -194,26 +220,26 @@ html, body {
     margin-right: 0;
 }
 
-.navbar-nav > li + li > a {
+.navbar-nav>li+li>a {
     margin-left: 40px;
 }
 
-.navbar-nav > li > a:hover,
-.navbar-nav > li.active > a,
-.nav > li > a:hover,
-.nav > li.active > a {
+.navbar-nav>li>a:hover,
+.navbar-nav>li.active>a,
+.nav>li>a:hover,
+.nav>li.active>a {
     background-color: transparent;
     border-bottom: 2px solid #212121;
 }
 
-.nav > li > a:focus {
+.nav>li>a:focus {
     background-color: transparent;
 }
 
 /* HERO
 ================================================== */
-.hero { 
-    background: url(../img/hero.jpg) no-repeat center / cover; 
+.hero {
+    background: url(../img/hero.jpg) no-repeat center / cover;
     height: 100%;
     width: 100%;
     min-height: 700px;
@@ -253,7 +279,7 @@ html, body {
     font-size: 22px;
     margin-bottom: 30px;
     line-height: 1;
-} 
+}
 
 .hero img {
     height: 600px;
@@ -267,10 +293,11 @@ html, body {
     background-color: #fff;
     z-index: 1;
 }
+
 /* site-section */
 .site-section {
-   padding-top: 120px;
-   font-size: 18px;
+    padding-top: 120px;
+    font-size: 18px;
 }
 
 .site-section h2,
@@ -309,7 +336,7 @@ html, body {
 }
 
 .progress-bar {
-    background-color: #212121da;  
+    background-color: #212121da;
 }
 
 .skill-tabs a {
@@ -318,17 +345,19 @@ html, body {
 
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
+.nav-pills>li.active>a,
+.nav-pills>li.active>a:focus,
+.nav-pills>li.active>a:hover {
     color: #000;
     border-bottom: transparent;
-    background-color:transparent;
+    background-color: transparent;
 }
 
-.nav-pills .btn.active{
+.nav-pills .btn.active {
     background-color: rgba(64, 68, 32, 0.061);
 }
 
-.skills-row{
+.skills-row {
     margin-top: 18px;
 }
 
@@ -342,7 +371,7 @@ html, body {
     content: '';
     background: url(../img/services-bg.jpg) no-repeat fixed center / cover;
     width: 100%;
-    height: 400px; 
+    height: 400px;
     position: absolute;
     left: 0;
     top: 0;
@@ -351,9 +380,9 @@ html, body {
 .overlay:after {
     content: '';
     width: 100%;
-    height: 400px; 
+    height: 400px;
     position: absolute;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     top: 0;
     left: 0;
     z-index: 0;
@@ -408,8 +437,8 @@ html, body {
     -ms-transition: background-color 0.25s ease-in-out;
 }
 
-.portfolio-item:hover:before{
-    background-color: rgba(33,33,33,0.6);
+.portfolio-item:hover:before {
+    background-color: rgba(33, 33, 33, 0.6);
 }
 
 .portfolio-item-info {
@@ -519,7 +548,7 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .section-counters h4 {
@@ -563,12 +592,12 @@ html, body {
     border-radius: 50%;
 }
 
-.icon + .icon {
+.icon+.icon {
     margin-left: 5px;
 }
 
 .icon i:before {
-    margin:0;
+    margin: 0;
 }
 
 .icon:hover {
@@ -583,11 +612,25 @@ html, body {
     -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
 }
 
-a.twitter-bg:hover {color: #55acee;}
-a.facebook-bg:hover{color: #3b5998;}
-a.gplus-bg:hover{color: #007bb5;} 
-a.linkedin-bg:hover {color: #dd4b39;}
-a.icon-up-bg:hover {color: #212121;}
+a.twitter-bg:hover {
+    color: #55acee;
+}
+
+a.facebook-bg:hover {
+    color: #3b5998;
+}
+
+a.gplus-bg:hover {
+    color: #007bb5;
+}
+
+a.linkedin-bg:hover {
+    color: #dd4b39;
+}
+
+a.icon-up-bg:hover {
+    color: #212121;
+}
 
 .copyright {
     margin-bottom: 0;
@@ -597,19 +640,19 @@ a.icon-up-bg:hover {color: #212121;}
 }
 
 /* Cursor title input */
-.txt-type > .txt {
+.txt-type>.txt {
     border-right: 0.1rem solid rgba(5, 5, 5, 0.671);
-  }
+}
 
 .intro-title {
     font-size: 24px;
 }
 
-.form-section{
+.form-section {
     margin-top: 15vh;
 }
 
-#mail_form{
+#mail_form {
     padding-top: 5vh;
 }
 
@@ -620,8 +663,6 @@ button.btn.btn-border {
 .carousel-caption {
     color: #000;
     text-shadow: 5px 10px 10px rgb(255, 255, 255),
-    -3px 10px 12px rgba(0, 0, 0, 0.75);
+        -3px 10px 12px rgba(0, 0, 0, 0.75);
 
 }
-
-.site-logo
