--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,69 +6,7 @@
  * Version: 1.0
  * */
 
-/* FONT
-================================================== */
-@font-face {
-    font-family: 'fontello';
-    src: url('../fonts/fontello.eot?37927580');
-    src: url('../fonts/fontello.eot?37927580#iefix') format('embedded-opentype'),
-        url('../fonts/fontello.woff2?37927580') format('woff2'),
-        url('../fonts/fontello.woff?37927580') format('woff'),
-        url('../fonts/fontello.ttf?37927580') format('truetype'),
-        url('../fonts/fontello.svg?37927580#fontello') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-    font-family: "fontello";
-    font-style: normal;
-    font-weight: normal;
-    speak: none;
-    display: inline-block;
-    text-decoration: inherit;
-    width: 1em;
-    margin-right: .2em;
-    text-align: center;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1em;
-    margin-left: .2em;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-twitter:before {
-    content: '\f099';
-}
-
-/* '' */
-.icon-facebook:before {
-    content: '\f09a';
-}
-
-/* '' */
-.icon-gplus:before {
-    content: '\f0d5';
-}
-
-/* '' */
-.icon-linkedin:before {
-    content: '\f0e1';
-}
-
-/* '' */
-.icon-linkedin:before {
-    content: '\f0e1';
-}
-
-/* '' */
-.icon-up:before {
-    content: '\f176';
-}
-
-/* '' */
 
 /* CUSTOM RESETS
 ================================================== */
@@ -311,9 +249,6 @@ body {
     margin: 15px 0 40px;
 }
 
-.site-section p {
-    margin-bottom: 35px;
-}
 
 /* Section: Skills ---empty section---*/
 .section-skills {
@@ -324,19 +259,6 @@ body {
     font-size: 24px;
     text-transform: uppercase;
     margin: 0 0 15px;
-}
-
-.progress {
-    height: 15px;
-    margin-bottom: 0;
-    border-radius: 0;
-    background-color: #dfdfdf;
-    box-shadow: none;
-    margin-bottom: 25px;
-}
-
-.progress-bar {
-    background-color: #212121da;
 }
 
 .skill-tabs a {
@@ -407,131 +329,6 @@ body {
     margin-bottom: 0;
 }
 
-/* Section: Portfolio */
-.section-portfolio {
-    padding-bottom: 120px;
-}
-
-.portfolio-item {
-    height: 280px;
-    margin-bottom: 30px;
-    position: relative;
-}
-
-.section-portfolio .col-md-4:nth-last-child(-n+3) .portfolio-item {
-    margin-bottom: 0;
-}
-
-.portfolio-item:before {
-    content: '';
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    transition: background-color 0.25s ease-in-out;
-    -moz-transition: background-color 0.25s ease-in-out;
-    -webkit-transition: background-color 0.25s ease-in-out;
-    -o-transition: background-color 0.25s ease-in-out;
-    -ms-transition: background-color 0.25s ease-in-out;
-}
-
-.portfolio-item:hover:before {
-    background-color: rgba(33, 33, 33, 0.6);
-}
-
-.portfolio-item-info {
-    position: absolute;
-    top: 150px;
-    left: 0px;
-    z-index: 999;
-    opacity: 0;
-    transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
-    -moz-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
-    -webkit-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
-    -o-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
-    -ms-transition: opacity 0.25s ease-in-out, left 0.25s ease-in-out;
-}
-
-.portfolio-item:hover .portfolio-item-info {
-    left: 50px;
-    opacity: 1;
-}
-
-.portfolio-item-info h4 {
-    margin: 0 0 20px;
-    font-weight: 700;
-    color: #fff;
-}
-
-.portfolio-item-info a {
-    padding: 6px 7px 4px;
-    font-size: 12px;
-    border: 1px solid #fff;
-    border-radius: 50px;
-    color: #fff;
-    transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -moz-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -webkit-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -o-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-}
-
-.portfolio-item-info a:hover {
-    color: #212121;
-    background-color: #fff;
-}
-
-.section-portfolio .btn {
-    margin-top: 10px;
-}
-
-/* Modal */
-.modal {
-    z-index: 9999;
-}
-
-.modal-content {
-    border-radius: 0;
-    box-shadow: 0px 0px 40px 8px rgba(0, 0, 0, 0.2);
-}
-
-.modal-header {
-    position: relative;
-    padding: 0;
-    height: 500px;
-}
-
-.modal-header .close {
-    position: absolute;
-    right: 0;
-    padding: 10px 11px;
-    margin-top: 0;
-    background-color: #fff;
-    font-size: 16px;
-    color: #212121;
-    border-left: 1px solid #212121;
-    border-bottom: 1px solid #212121;
-    opacity: 1;
-    transition: box-shadow 0.25s ease-in-out;
-    -moz-transition: box-shadow 0.25s ease-in-out;
-    -webkit-transition: box-shadow 0.25s ease-in-out;
-    -o-transition: box-shadow 0.25s ease-in-out;
-    -ms-transition: box-shadow 0.25s ease-in-out;
-}
-
-.modal-header .close:hover {
-    box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
-}
-
-.modal-body h4 {
-    font-weight: 700;
-}
-
-.modal-footer {
-    text-align: center;
-}
 
 /* Section: Counters */
 .section-counters {
@@ -573,71 +370,6 @@ body {
     margin-top: 40px;
 }
 
-/* FOOTER
-================================================== */
-.site-footer {
-    position: fixed;
-    bottom: 0;
-    padding: 30px 0;
-    width: 100%;
-    background-color: #212121;
-    z-index: -1;
-}
-
-.icon {
-    line-height: 40px;
-    padding: 9px 11px;
-    color: #fff;
-    border: 1px solid #fff;
-    border-radius: 50%;
-}
-
-.icon+.icon {
-    margin-left: 5px;
-}
-
-.icon i:before {
-    margin: 0;
-}
-
-.icon:hover {
-    background-color: #fff;
-}
-
-.site-footer a {
-    transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -moz-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -webkit-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -o-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-    -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-}
-
-a.twitter-bg:hover {
-    color: #55acee;
-}
-
-a.facebook-bg:hover {
-    color: #3b5998;
-}
-
-a.gplus-bg:hover {
-    color: #007bb5;
-}
-
-a.linkedin-bg:hover {
-    color: #dd4b39;
-}
-
-a.icon-up-bg:hover {
-    color: #212121;
-}
-
-.copyright {
-    margin-bottom: 0;
-    line-height: 40px;
-    color: #fff;
-    text-align: center;
-}
 
 /* Cursor title input */
 .txt-type>.txt {
@@ -666,3 +398,22 @@ button.btn.btn-border {
         -3px 10px 12px rgba(0, 0, 0, 0.75);
 
 }
+/* Skillbar */
+.meter {
+    box-sizing: content-box;
+    margin-bottom: 2vh;
+    height: 15px; /* Can be anything */
+    position: relative;
+    background: rgba(0, 0, 0, 0.15);
+  }
+  .meter > span {
+    display: block;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    
+    position: relative;
+    overflow: hidden;
+  }
+
+  
+  
